added routers to main category, check controllers added swagger routers
